--- a/flux_s6.html
+++ b/flux_s6.html
@@ -19,7 +19,6 @@
             <button id="voucher">Super Crémeux à 2 euros</button>
         </div>
         <div id="command"></div>
-        <script src="https://unpkg.com/@reduxjs/toolkit/dist/redux-toolkit.umd.min.js"></script>
-        <script src="flux_s6.js"></script>
+        <script src="https://unpkg.com/@reduxjs/toolkit@1.9.7/dist/redux-toolkit.umd.js"></script>        <script src="flux_s6.js"></script>
     </body>
 </html>
